--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "name": "crystalwishtarot",
+      "name": "Crystal's Magick Corner",
       "logo": {
         "@type": "ImageObject",
         "url": "./public/icons/favicon.png",
